# app/handlers/user_handler.go
@@ -16,18 +16,18 @@ func NewUserHandler(userUsecase usecases.UserUsecase) *UserHandler {
 	return &UserHandler{userUsecase: userUsecase}
 }
 
-func (h *UserHandler) RegisterRoutes(e *echo.Echo) {
-	e.POST("/login", h.Login)
-	e.POST("/register", h.RegisterUser)
-	e.POST("password/reset_request", h.PasswordReset)
-	e.PUT("/password/reset/:id", h.PasswordResetId)
-
-	userGroup := e.Group("/users")
-	// Add middleware here if needed
-	userGroup.GET("/:id", h.GetUserByID)
-	userGroup.PUT("/:id", h.UpdateUserByID)
-}
-
+// Login godoc
+// @Summary Login a user
+// @Description Login a user
+// @Tags User
+// @Accept json
+// @Produce json
+// @Param user body models.Login true "User credentials"
+// @Success 200 {object} map[string]interface{}
+// @Failure 400 {object} map[string]string
+// @Failure 401 {object} map[string]string
+// @Failure 500 {object} map[string]string
+// @Router /login [post]
 func (h *UserHandler) Login(c echo.Context) error {
 	var loginData models.Login
 	if err := c.Bind(&loginData); err != nil {
@@ -43,6 +43,17 @@ func (h *UserHandler) Login(c echo.Context) error {
 	return c.JSON(http.StatusOK, echo.Map{"message": "Login successful", "accessToken": accessToken, "refreshToken": refreshToken})
 }
 
+// RegisterUser godoc
+// @Summary Register a new user
+// @Description Register a new user
+// @Tags User
+// @Accept json
+// @Produce json
+// @Param user body models.User true "User object to be registered"
+// @Success 201 {object} models.User
+// @Failure 400 {object} map[string]string
+// @Failure 500 {object} map[string]string
+// @Router /register [post]
 func (h *UserHandler) RegisterUser(c echo.Context) error {
 	var newUser models.User
 	if err := c.Bind(&newUser); err != nil {
@@ -61,6 +72,17 @@ func (h *UserHandler) RegisterUser(c echo.Context) error {
 	return c.JSON(http.StatusOK, echo.Map{"message": "User registered successfully"})
 }
 
+// PasswordReset godoc
+// @Summary Request password reset
+// @Description Request a password reset token to be sent to the user's email
+// @Tags User
+// @Accept json
+// @Produce json
+// @Param email body models.ResetRequest true "Email"
+// @Success 200 {object} map[string]string
+// @Failure 400 {object} map[string]string
+// @Failure 500 {object} map[string]string
+// @Router /password/reset [post]
 func (h *UserHandler) PasswordReset(c echo.Context) error {
 	var resetReq models.ResetRequest
 	if err := c.Bind(&resetReq); err != nil {
@@ -76,6 +98,18 @@ func (h *UserHandler) PasswordReset(c echo.Context) error {
 	return c.JSON(http.StatusOK, echo.Map{"message": "Update Password Success!", "token": resetToken})
 }
 
+// PasswordResetId godoc
+// @Summary Reset user password
+// @Description Reset user password using a valid reset token
+// @Tags User
+// @Accept json
+// @Produce json
+// @Param id path string true "Reset Token"
+// @Param password body models.PasswordConfirmReset true "New Password and Confirm Password"
+// @Success 200 {object} map[string]string
+// @Failure 400 {object} map[string]string
+// @Failure 500 {object} map[string]string
+// @Router /password/reset/{id} [put]
 func (h *UserHandler) PasswordResetId(c echo.Context) error {
 	id := c.Param("id")
 	var passReset models.PasswordConfirmReset
@@ -95,6 +129,19 @@ func (h *UserHandler) PasswordResetId(c echo.Context) error {
 	return c.JSON(http.StatusOK, echo.Map{"message": "Password reset successfully"})
 }
 
+// GetUserByID godoc
+// @Summary Get user by ID
+// @Description Retrieve user details by user ID
+// @Tags User
+// @Accept json
+// @Produce json
+// @Param id path string true "User ID"
+// @Success 200 {object} map[string]interface{}
+// @Failure 400 {object} map[string]string
+// @Failure 404 {object} map[string]string
+// @Failure 500 {object} map[string]string
+// @Security     BearerAuth
+// @Router /users/{id} [get]
 func (h *UserHandler) GetUserByID(c echo.Context) error {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
@@ -107,6 +154,20 @@ func (h *UserHandler) GetUserByID(c echo.Context) error {
 	return c.JSON(http.StatusOK, echo.Map{"data": user, "message": "User retrieved successfully"})
 }
 
+// UpdateUserByID godoc
+// @Summary Update user by ID
+// @Description Update user details by user ID
+// @Tags User
+// @Accept json
+// @Produce json
+// @Param id path string true "User ID"
+// @Param user body models.UpdateUser true "User object to be updated"
+// @Success 200 {object} map[string]interface{}
+// @Failure 400 {object} map[string]string
+// @Failure 404 {object} map[string]string
+// @Failure 500 {object} map[string]string
+// @Security     BearerAuth
+// @Router /users/{id} [put]
 func (h *UserHandler) UpdateUserByID(c echo.Context) error {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
