# docs/swagger.json
@@ -1,11 +1,7 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is a sample server for E-Meeting.",
-        "title": "E-Meeting API",
-        "termsOfService": "http://swagger.io/terms/",
-        "contact": {},
-        "version": "1.0"
+        "contact": {}
     },
     "paths": {
         "/dashboard": {
@@ -46,7 +42,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/main.DashboardResponse"
+                            "$ref": "#/definitions/models.DashboardResponse"
                         }
                     },
                     "400": {
@@ -143,6 +139,68 @@
                 }
             }
         },
+        "/login": {
+            "post": {
+                "description": "Login a user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "Login a user",
+                "parameters": [
+                    {
+                        "description": "User credentials",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Login"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/password/reset": {
             "post": {
                 "description": "Request a password reset token to be sent to the user's email",
@@ -163,7 +221,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/main.ResetRequest"
+                            "$ref": "#/definitions/models.ResetRequest"
                         }
                     }
                 ],
@@ -225,7 +283,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/main.PasswordConfirmReset"
+                            "$ref": "#/definitions/models.PasswordConfirmReset"
                         }
                     }
                 ],
@@ -280,7 +338,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/main.User"
+                            "$ref": "#/definitions/models.User"
                         }
                     }
                 ],
@@ -288,7 +346,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/main.User"
+                            "$ref": "#/definitions/models.User"
                         }
                     },
                     "400": {
@@ -332,7 +390,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/main.ReservationRequestBody"
+                            "$ref": "#/definitions/models.ReservationRequestBody"
                         }
                     }
                 ],
@@ -498,7 +556,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/main.UpdateReservationRequest"
+                            "$ref": "#/definitions/models.UpdateReservationRequest"
                         }
                     }
                 ],
@@ -574,7 +632,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/main.ReservationByIDResponse"
+                            "$ref": "#/definitions/models.ReservationByIDResponse"
                         }
                     },
                     "400": {
@@ -666,7 +724,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/main.ScheduleResponse"
+                            "$ref": "#/definitions/models.ScheduleResponse"
                         }
                     },
                     "400": {
@@ -940,7 +998,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/main.RoomRequest"
+                            "$ref": "#/definitions/models.RoomRequest"
                         }
                     }
                 ],
@@ -1100,7 +1158,37 @@
                 }
             }
         },
-        "/save-image": {
+        "/snacks": {
+            "get": {
+                "description": "Get all snacks",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Snack"
+                ],
+                "summary": "Get all snacks",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/uploads": {
             "post": {
                 "description": "Upload an image to temp folder and return its URL",
                 "consumes": [
@@ -1137,36 +1225,6 @@
                             "additionalProperties": {
                                 "type": "string"
                             }
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/snacks": {
-            "get": {
-                "description": "Get all snacks",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Snack"
-                ],
-                "summary": "Get all snacks",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
                         }
                     },
                     "500": {
@@ -1276,7 +1334,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/main.updateUser"
+                            "$ref": "#/definitions/models.UpdateUser"
                         }
                     }
                 ],
@@ -1320,7 +1378,7 @@
         }
     },
     "definitions": {
-        "main.DashboardResponse": {
+        "models.DashboardResponse": {
             "type": "object",
             "properties": {
                 "data": {
@@ -1329,7 +1387,7 @@
                         "rooms": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/main.DashboardRoom"
+                                "$ref": "#/definitions/models.DashboardRoom"
                             }
                         },
                         "totalOmzet": {
@@ -1351,7 +1409,7 @@
                 }
             }
         },
-        "main.DashboardRoom": {
+        "models.DashboardRoom": {
             "type": "object",
             "properties": {
                 "id": {
@@ -1368,7 +1426,23 @@
                 }
             }
         },
-        "main.PasswordConfirmReset": {
+        "models.Login": {
+            "type": "object",
+            "required": [
+                "password",
+                "username"
+            ],
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "description": "login using username or email",
+                    "type": "string"
+                }
+            }
+        },
+        "models.PasswordConfirmReset": {
             "type": "object",
             "required": [
                 "confirm_password",
@@ -1383,7 +1457,7 @@
                 }
             }
         },
-        "main.PersonalData": {
+        "models.PersonalData": {
             "type": "object",
             "properties": {
                 "company": {
@@ -1397,16 +1471,16 @@
                 }
             }
         },
-        "main.ReservationByIDData": {
+        "models.ReservationByIDData": {
             "type": "object",
             "properties": {
                 "personalData": {
-                    "$ref": "#/definitions/main.PersonalData"
+                    "$ref": "#/definitions/models.PersonalData"
                 },
                 "rooms": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/main.RoomInfo"
+                        "$ref": "#/definitions/models.RoomInfo"
                     }
                 },
                 "status": {
@@ -1423,18 +1497,18 @@
                 }
             }
         },
-        "main.ReservationByIDResponse": {
+        "models.ReservationByIDResponse": {
             "type": "object",
             "properties": {
                 "data": {
-                    "$ref": "#/definitions/main.ReservationByIDData"
+                    "$ref": "#/definitions/models.ReservationByIDData"
                 },
                 "message": {
                     "type": "string"
                 }
             }
         },
-        "main.ReservationRequestBody": {
+        "models.ReservationRequestBody": {
             "type": "object",
             "properties": {
                 "addSnack": {
@@ -1456,7 +1530,7 @@
                 "rooms": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/main.RoomReservationRequest"
+                        "$ref": "#/definitions/models.RoomReservationRequest"
                     }
                 },
                 "totalParticipants": {
@@ -1468,7 +1542,7 @@
                 }
             }
         },
-        "main.ResetRequest": {
+        "models.ResetRequest": {
             "type": "object",
             "required": [
                 "email"
@@ -1479,7 +1553,7 @@
                 }
             }
         },
-        "main.RoomInfo": {
+        "models.RoomInfo": {
             "type": "object",
             "properties": {
                 "capacity": {
@@ -1504,7 +1578,7 @@
                     "type": "number"
                 },
                 "snack": {
-                    "$ref": "#/definitions/main.Snack"
+                    "$ref": "#/definitions/models.Snack"
                 },
                 "startTime": {
                     "type": "string"
@@ -1520,7 +1594,7 @@
                 }
             }
         },
-        "main.RoomRequest": {
+        "models.RoomRequest": {
             "type": "object",
             "properties": {
                 "capacity": {
@@ -1540,7 +1614,7 @@
                 }
             }
         },
-        "main.RoomReservationRequest": {
+        "models.RoomReservationRequest": {
             "type": "object",
             "properties": {
                 "addSnack": {
@@ -1566,7 +1640,7 @@
                 }
             }
         },
-        "main.RoomScheduleInfo": {
+        "models.RoomScheduleInfo": {
             "type": "object",
             "properties": {
                 "companyName": {
@@ -1581,12 +1655,12 @@
                 "schedules": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/main.Schedule"
+                        "$ref": "#/definitions/models.Schedule"
                     }
                 }
             }
         },
-        "main.Schedule": {
+        "models.Schedule": {
             "type": "object",
             "properties": {
                 "endTime": {
@@ -1600,13 +1674,13 @@
                 }
             }
         },
-        "main.ScheduleResponse": {
+        "models.ScheduleResponse": {
             "type": "object",
             "properties": {
                 "data": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/main.RoomScheduleInfo"
+                        "$ref": "#/definitions/models.RoomScheduleInfo"
                     }
                 },
                 "message": {
@@ -1626,7 +1700,7 @@
                 }
             }
         },
-        "main.Snack": {
+        "models.Snack": {
             "type": "object",
             "properties": {
                 "category": {
@@ -1646,7 +1720,7 @@
                 }
             }
         },
-        "main.UpdateReservationRequest": {
+        "models.UpdateReservationRequest": {
             "type": "object",
             "required": [
                 "reservation_id",
@@ -1666,31 +1740,7 @@
                 }
             }
         },
-        "main.User": {
-            "type": "object",
-            "required": [
-                "email",
-                "name",
-                "password",
-                "username"
-            ],
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "password": {
-                    "description": "password harus ada angka, huruf besar, huruf kecil, dan simbol",
-                    "type": "string"
-                },
-                "username": {
-                    "type": "string"
-                }
-            }
-        },
-        "main.updateUser": {
+        "models.UpdateUser": {
             "type": "object",
             "properties": {
                 "email": {
@@ -1730,14 +1780,30 @@
                     "type": "string"
                 }
             }
-        }
-    },
-    "securityDefinitions": {
-        "BearerAuth": {
-            "description": "Type \"Bearer\" followed by a space and JWT token.",
-            "type": "apiKey",
-            "name": "Authorization",
-            "in": "header"
+        },
+        "models.User": {
+            "type": "object",
+            "required": [
+                "email",
+                "name",
+                "password",
+                "username"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "password": {
+                    "description": "password harus ada angka, huruf besar, huruf kecil, dan simbol",
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
         }
     }
 }
